--- a/scss/style.scss
+++ b/scss/style.scss
@@ -227,7 +227,7 @@
       }
       .icon-delete {
         color: #f44336;
-        // margin-left: 15px;
+        margin-left: 15px;
         display: inline-block;
         transition: all 0.2s ease-in;
         &:hover {
